--- a/apps/bank-webhook/package.json
+++ b/apps/bank-webhook/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx esbuild ./src/index.ts --bundle --platform=node --outfile=dist/index.js",
+    "start": "node dist/index.js",
+    "dev": "npm run build && npm run start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@repo/db": "*",
     "@types/express": "^5.0.0",
     "esbuild": "^0.25.0",
     "express": "^4.21.2"
